MVP. fixed hover feature. started stretches

--- a/components/Carousel/Carousel.less
+++ b/components/Carousel/Carousel.less
@@ -39,3 +39,7 @@
     display: none;
   }
 }
+
+.active-img {
+  display: block;
+}
